# spcppl

./: CMakeLists.txt  CoordinateMinimizer.hpp  DSU.hpp  LICENSE  Matrix.hpp  MaximumFinder.hpp  MinimumFinder.hpp  README.md  assert.hpp  asserts.hpp  binpow.hpp  convolution.hpp  coordinate_minimizer.hpp  dsu.hpp  extended_gcd.hpp  fft.hpp  gcd.hpp  identity.hpp  make_vector.hpp  matrix.hpp  matrixMultiplication.hpp  matrix_multiplication.hpp  maximum_finder.hpp  minimum_finder.hpp  parallel.hpp  rational.hpp  zn.hpp
dataStructures/: BitSet.hpp  SparseTable.hpp  Treap.hpp  TreapMultiset.hpp
flow/: AbsoluteMincostFlowStrategy.hpp  DinicFlow.hpp  FixedCostMaxFlowStrategy.hpp  FixedFlowMIncostStrategy.hpp  MinCostFlow.hpp  dinic.hpp  fixedcostmaxflow.hpp  mincost.hpp
functors/: Max.hpp  Min.hpp  NegativeInfinity.hpp  PositiveInfinity.hpp
gauss/: determinant.hpp  matrixRank.hpp  reduceToRowEchelonForm.hpp
geometry/: Point2D.hpp
graphs/: SimpleGraph.hpp  VectorVectorBaseGraph.hpp  WeightedGraph.hpp
numbers/: Rational.hpp  Zn.hpp  bits.hpp  division.hpp  divisions.hpp  divisors.hpp  linearSieve.hpp  linear_sieve.hpp  numbers.hpp  primes.hpp  progression.hpp  rational.hpp  zn.hpp
random/: random.hpp
ranges/: Range.hpp  fors.hpp  range.hpp  wrappers.hpp
spcppl/: Bool.hpp  DSU.hpp  Matrix.hpp  binpow.hpp  dgcj.h  fft.hpp  make_constant.hpp  make_vector.hpp  updateMin.hpp  update_min.hpp
strings/: SuffixArray.hpp
tests/: CoordinateMinimizer.cpp  DSU.cpp  Matrix.cpp  binpow.cpp  convolution.cpp  detectionIdiom.hpp  identity.cpp  make_vector.cpp  parallel.cpp  (+1 more)
(+123 files in other folders)
